2008-06-28  Massimiliano Mantione <massi@ximian.com>
	* mono-profiler-logging.c: When offloading flushing to the writer
	thread, first check that it still exists.

2008-06-25  Massimiliano Mantione <massi@ximian.com>
	* mono-profiler-logging.c: Offload more flushing to the writer thread,
	and fix the shutdown sequence.

2008-06-25  Massimiliano Mantione <massi@ximian.com>
	* mono-profiler-logging.c: Made so that at appdomain unload the
	buffers are flushed by the profiler worker thread (which we know
	is registered with the runtime).

2008-06-25  Massimiliano Mantione <massi@ximian.com>
	* mono-profiler-logging.c: Added more logging code.

2008-06-25  Massimiliano Mantione <massi@ximian.com>
	* mono-profiler-logging.c: Record also the domain of each statistical
	hit, so that mono_jit_info_table_find works properly.

2008-06-25  Massimiliano Mantione <massi@ximian.com>
	* mono-profiler-logging.c: Fixed breakage introduced in r105966

2008-06-17  Massimiliano Mantione <massi@ximian.com>
	* mono-profiler-logging.c: Implemented signal based enable-disable
	toggling for the statistical and enter-exit events.

2008-06-17  Massimiliano Mantione <massi@ximian.com>
	* mono-profiler-logging.c (write_statistical_hit): Use the proper
	domain instead of trying to get one.

2008-06-16  Massimiliano Mantione <massi@ximian.com>
	* mono-profiler-logging.c (module_end_load, assembly_end_load):
	Properly check the return value of "mono_assembly_fill_assembly_name",
	otherwise "mono_stringify_assembly_name" can crash.

2008-06-16  Massimiliano Mantione <massi@ximian.com>
	* mono-profiler-logging.c: Fix a segfault on shutdown (see Marek's
	fix for the default profiler in r105466, the problem is the same.

2008-06-16  Massimiliano Mantione <massi@ximian.com>
	* mono-profiler-logging.c: Initial implementation of summary report
	for allocations at each collection.

2008-05-23  Massimiliano Mantione <massi@ximian.com>
	* mono-profiler-logging.c: Fix warnings x86 and remove debugging code.
