@@ -1,3 +1,7 @@
+2008-07-03  Massimiliano Mantione <massi@ximian.com>
+	* mono-profiler-logging.c: Changed the way to wait for the writer
+	thread to avoid passing an invalid handle to pthread_join.
+
 2008-06-28  Massimiliano Mantione <massi@ximian.com>
 	* mono-profiler-logging.c: When offloading flushing to the writer
 	thread, first check that it still exists.
